--- a/index.html
+++ b/index.html
@@ -8,9 +8,48 @@
     <title>Frontend Mentor | Todo app</title>
   </head>
   <body>
-    Todo
-
-    <!-- Add dynamic number -->items left All Active Completed Clear Completed
+    <header class="header">
+      <h1 class="header__title">TODO</h1>
+      <button class="header__button" type="button">
+        <img src="./images/icon-moon.svg" alt="Dark mode toggle" />
+      </button>
+    </header>
+    <main>
+      <section class="main__input">
+        <div class="circle"></div>
+        <label for="main-input" class="disappear">Main input</label>
+        <input type="text" placeholder="Create a new todo..." id="main-input" />
+      </section>
+      <section class="todos">
+        <div id="todo-list" class="todos-list">
+          <div data-todo-li class="todo">
+            <div class="todo__circle"></div>
+            <p class="todo__description">New Todo</p>
+            <div class="todo__close">
+              <img src="./images/icon-cross.svg" alt="" />
+            </div>
+          </div>
+        </div>
+        <div class="todos-list__info">
+          <div id="remaining-todos">5 items left</div>
+          <ul class="todos-list__filter">
+            <li><a href="#" class="active">All</a></li>
+            <li><a href="#" class="">Active</a></li>
+            <li><a href="#" class="">Completed</a></li>
+          </ul>
+          <button class="todos-list__button" type="button">
+            Clear Completed
+          </button>
+        </div>
+      </section>
+    </main>
+    <template>
+      <div data-todo-li class="todo">
+        <div class="todo__circle"></div>
+        <p class="todo__description"></p>
+        <div class="todo__close"></div>
+      </div>
+    </template>
     <script src="./dist/index.js"></script>
   </body>
 </html>
