Add filter feature

--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
             <li><a href="#" class="">Active</a></li>
             <li><a href="#" class="">Completed</a></li>
           </ul>
-          <button class="todos-list__button" type="button">
-            Clear Completed
-          </button>
+          <a href="#" class="todos-list__button">Clear Completed</a>
         </div>
       </section>
     </main>
