Added local storage saving for todos

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="circle"></div>
         <form id="main-input-form">
           <label for="main-input" class="disappear">Main input</label>
-          <input type="text" placeholder="Create a new todo..." id="main-input" />
+          <input type="text" placeholder="Create a new todo..." id="main-input" maxlength="150" />
         </form>
       </section>
       <section class="todos">
